# ndisc6

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  Makefile  Makefile.am  NEWS  README  autogen.sh  bootstrap  config.cmake  configure.ac  ndisc.8  ndisc.c  ndisc6.8  rdisc.8  rdisc6.8  tcptraceroute6.8  traceroute.c  traceroute6.8
compat/: Makefile.am  fixups.h  ppoll.c
doc/: .gitignore  Makefile.am  addr2name.1  addrinfo.1  dnssort.1  ndisc6.8  rdisc6.8  rdnssd.8-in  rltraceroute6.8  tcpspray.1  tcpspray6.1  traceroute6.8
ezirad/: Makefile  NOTES  config.h  ezirad.c  ezirad.h  sys_netlink.c
m4/: .gitignore  Makefile.am  getopt.m4  sockaddr.m4
po/: .gitignore  LINGUAS  Makevars  POTFILES.in  cs.po  de.po  en.po  en_GB.po  fr.po  ndisc6.pot  sv.po
rdnss/: .gitignore  Makefile.am  icmp.c  merge-hook.in  netlink.c  rdnssd.c  rdnssd.h
rdnssd/: Makefile.am  icmp.c  merge-hook.in  netlink.c  rdnssd.c  rdnssd.h
src/: .gitignore  CMakeLists.txt  Makefile.am  addrinfo.c  dnssort.in  gen-alias  gettime.h  inet6rth.h  ndisc.c  rdnssd.c  tcpspray.c  tcptraceroute.c  trace-icmp.c  trace-tcp.c  trace-udp.c  traceroute.c  traceroute.h
